--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.1",
+    "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.19",
