--- a/package.json
+++ b/package.json
@@ -24,26 +24,32 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/typeorm": "^10.0.1",
+    "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "ioredis": "^5.3.2",
     "mysql2": "^3.7.1",
     "nodemailer": "^6.9.8",
+    "passport": "^0.7.0",
+    "passport-github-oauth20": "^1.0.4",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.19",
     "typeorm-model-generator": "^0.4.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
