--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.1",
     "@nestjs/typeorm": "^10.0.1",
+    "aws-sdk": "^2.1547.0",
     "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.1",
     "ioredis": "^5.3.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
@@ -48,6 +50,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
